// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pagination - prop type is enum and requires 'example' or 'simple' and does not produce an error when either is provided 1`] = `
<div>
  <Pagination
    type="example"
  />
  <Pagination
    type="simple"
  />
</div>
`;

exports[`Component: Pagination - prop type is enum and requires 'example' or 'simple' and produces an error when neither is provided 1`] = `
<Fragment>
  <nav
    aria-label="Pagination Navigation"
    role="navigation"
  >
    <ul
      className="pagination pagination-test"
    />
  </nav>
</Fragment>
`;

exports[`Component: Pagination - renders 1`] = `
<Fragment>
  <nav
    aria-label="Pagination Navigation"
    role="navigation"
  >
    <ul
      className="pagination"
    />
  </nav>
</Fragment>
`;

exports[`Component: Pagination - renders arrows when prop arrows is provided 1`] = `
<Pagination
  arrows={true}
>
  <nav
    aria-label="Pagination Navigation"
    role="navigation"
  >
    <ul
      className="pagination"
    >
      <Arrow
        type="back"
      >
        <li
          aria-label="back"
          className="arrow-back disabled"
        >
          

          <a
            href="#"
          />
          

        </li>
      </Arrow>
      <Arrow
        type="forward"
      >
        <li
          aria-label="forward"
          className="arrow-forward "
        >
          

          <a
            href="#"
          />
          

        </li>
      </Arrow>
    </ul>
  </nav>
</Pagination>
`;

exports[`Component: Pagination - renders list items when prop items is provided 1`] = `
<Fragment>
  <nav
    aria-label="Pagination Navigation"
    role="navigation"
  >
    <ul
      className="pagination"
    >
      <li
        className=""
        key="0"
      >
        

        <a
          aria-label="Go to page test#1"
          href="#"
        >
          test#1
        </a>
        

      </li>
      <li
        className=""
        key="1"
      >
        

        <a
          aria-label="Go to page test#2"
          href="#"
        >
          test#2
        </a>
        

      </li>
    </ul>
  </nav>
</Fragment>
`;
